fix: English translation

--- a/src/app/pages/setting/setting.component.html
+++ b/src/app/pages/setting/setting.component.html
@@ -60,7 +60,7 @@
 
       <d-row class="setting-toggle" [dGutter]="48" [dSpace]="12">
         <d-col class="title" [dSpan]="{ss:24,ms:8,mm:4,ml:3}" i18n="Setting Label">
-          流式输出
+          连续输出
         </d-col>
         <d-col class="toggle" [dSpan]="{ss:8,ms:4,mm:2}">
           <d-toggle name="stream" [(ngModel)]="api.isStream"></d-toggle>
